2008-12-12 (0.1.1)
  * Added the version and date to the wiki_creole.rb file

2008-12-10 (0.1.0)
  * Initial Rubyforge Version