@@ -1,5 +1,7 @@
 2008-12-12 (0.1.1)
   * Added the version and date to the wiki_creole.rb file
+  * Added the Rakefile and tests to the built gem
+  * ensured that the tests were properly run when installing the gem
 
 2008-12-10 (0.1.0)
   * Initial Rubyforge Version
